# demo-telegram-bot

./: .gitignore  Cargo.toml  README.md  bot-config.yaml
src/: api.rs  config.rs  indicators.rs  main.rs  models.rs  plotter.rs
src/api/: exchanges.rs  telegram.rs
src/api/telegram/: handlers.rs  menu.rs
