[package]
name = "demo-telegram-bot"
version = "0.1.0"
edition = "2021"
authors = ["Hack-Labs Research Alliance <hack-labs.science>"]
license = "HL-EULA"
keywords = ["web-app", "telegram-bot"]

[dependencies]
chrono = "0.4.31"
log = "0.4.20"
plotters = "0.3.5"
pretty_env_logger = "0.5.0"
reqwest = { version = "0.11.22", features = ["json"] }
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
serde_yaml = "0.9.25"
teloxide = { version = "0.12.2", features = ["full"] }
tokio = { version = "1.33.0", features = ["full"] }
